workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/Pagamento_de_Sinistro__c.object-meta.xml
<CustomObject>
    <label>Pagamento de Sinistro</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Pagamento de Sinistro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagamentos de Sinistro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>