workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Agencia_formula__c.field-meta.xml
<CustomField>
    <fullName>Agencia_formula__c</fullName>
    <formula>Dados_Bancarios__r.Agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agência</label>
    <type>Text</type>
</CustomField>