workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Banco_formula__c.field-meta.xml
<CustomField>
    <fullName>Banco_formula__c</fullName>
    <formula>Dados_Bancarios__r.BancoNew__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banco</label>
    <type>Text</type>
</CustomField>