workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Beneficiario_da_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario_da_Garantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo receberá o ID da conta que receberá o pagamento</description>
    <label>Beneficiário da Garantia</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pagamentos de Sinistro</relationshipLabel>
    <relationshipName>Pagamentos_de_Sinistro</relationshipName>
    <type>Lookup</type>
</CustomField>