workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Beneficiario_formula__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario_formula__c</fullName>
    <formula>Beneficiario_da_Garantia__r.FirstName &amp; &apos; &apos; &amp; Beneficiario_da_Garantia__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiario</label>
    <type>Text</type>
</CustomField>