workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/BeneficiarioValidado__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarioValidado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiário validado</label>
    <type>Checkbox</type>
</CustomField>