workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Caso_de_Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Caso_de_Sinistro__c</fullName>
    <label>Caso de Sinistro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sinistro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pagamentos de Sinistro</relationshipLabel>
    <relationshipName>Pagamentos_de_Sinistro</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>