workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Conta_formula__c.field-meta.xml
<CustomField>
    <fullName>Conta_formula__c</fullName>
    <formula>Dados_Bancarios__r.NumeroConta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta</label>
    <type>Text</type>
</CustomField>