workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Dados_Bancarios__c.field-meta.xml
<CustomField>
    <fullName>Dados_Bancarios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dados Bancários</label>
    <referenceTo>InformacaoBancaria__c</referenceTo>
    <relationshipLabel>Pagamentos de Sinistro</relationshipLabel>
    <relationshipName>Pagamentos_de_Sinistro</relationshipName>
    <type>Lookup</type>
</CustomField>