workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Data_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_pagamento__c</fullName>
    <label>Data de pagamento;</label>
    <type>Date</type>
</CustomField>