workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Data_do_evento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_evento__c</fullName>
    <formula>Caso_de_Sinistro__r.Dataocorrencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do Evento</label>
    <type>Date</type>
</CustomField>