workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Garantia_do_Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Garantia_do_Sinistro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do Sinistro</label>
    <referenceTo>PagamentoGarantia__c</referenceTo>
    <relationshipLabel>Pagamentos de Sinistro</relationshipLabel>
    <relationshipName>Pagamentos_de_Sinistro</relationshipName>
    <type>Lookup</type>
</CustomField>