workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Inicio_de_Vigencia_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Vigencia_Contrato__c</fullName>
    <formula>Caso_de_Sinistro__r.Inicio_do_Contrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inicio de Vigencia Contrato</label>
    <type>Date</type>
</CustomField>