workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Nome_do_segurado_formula__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_segurado_formula__c</fullName>
    <formula>Caso_de_Sinistro__r.Account.FirstName &amp; &apos; &apos; &amp; Caso_de_Sinistro__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do segurado</label>
    <type>Text</type>
</CustomField>