workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Numero_do_sinistro_formula__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_sinistro_formula__c</fullName>
    <formula>Caso_de_Sinistro__r.NumeroSinistro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero do sinistro</label>
    <type>Text</type>
</CustomField>