workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/OP_SAP__c.field-meta.xml
<CustomField>
    <fullName>OP_SAP__c</fullName>
    <externalId>true</externalId>
    <label>OP SAP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>