workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Requisicao_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Requisicao_de_Pagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>campo que terá o vinculo com a requisição de pagamento</description>
    <inlineHelpText>Identificador da requisição de pagamento</inlineHelpText>
    <label>Requisição de Pagamento</label>
    <referenceTo>Requisicao_de_Pagamento__c</referenceTo>
    <relationshipLabel>Pagamentos de Sinistro</relationshipLabel>
    <relationshipName>Pagamentos_de_Sinistro</relationshipName>
    <type>Lookup</type>
</CustomField>