workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Sinistro_com_Pendencias__c.field-meta.xml
<CustomField>
    <fullName>Sinistro_com_Pendencias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sinistro com Pendências</label>
    <type>Checkbox</type>
</CustomField>