workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>OP em criação</fullName>
            </value>
            <value>
                <fullName>OP criada</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
            <value>
                <fullName>Em pagamento</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>