workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Sucursal_Destino_de_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_Destino_de_Cheque__c</fullName>
    <label>Sucursal Destino de Cheque</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Pagamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>SÃO PAULO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>RIO DE JANEIRO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>PERNAMBUCO</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>BAHIA</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>TOCANTINS</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>MINAS GERAIS</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>PARANÁ</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>MOGI DAS CRUZES</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>MARANHÃO</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>PARÁ</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>DISTRITO FEDERAL</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>AMAZONAS</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>ESPÍRITO SANTO</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>GOIÁS</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>RIO GRANDE DO SUL</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>SANTA CATARINA</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>MATO GROSSO</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>ALAGOAS</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>RIO GRANDE DO NORTE</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>MATO GROSSO DO SUL</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>CEARÁ</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>LITORAL PAULISTA</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>PIAUÍ</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>INATIVO - INTERIOR PAULISTA</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>RUNOFF - CONVÊNIOS</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>CAMPINAS</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>REPLACE</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>SÃO PAULO - INTERLAGOS</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>SÃO PAULO - ITAQUERA</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>SÃO PAULO - VILA PRUDENTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>