workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Tipo_de_Aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Aprova_o__c</fullName>
    <label>Tipo de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alçada Salesforce</fullName>
            </value>
            <value>
                <fullName>Alçada SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>