workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Tipo_de_OP__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_OP__c</fullName>
    <label>Tipo de OP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registro</fullName>
            </value>
            <value>
                <fullName>Pagamento</fullName>
            </value>
            <value>
                <fullName>Operacional</fullName>
            </value>
            <value>
                <fullName>Indenização</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>