workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Tipo_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pagamento__c</fullName>
    <label>Tipo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferencia Bancaria para Conta Corrente</fullName>
            </value>
            <value>
                <fullName>Transferencia Bancaria para Conta Poupanca</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>