workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/fields/Valor_total_a_ser_indenizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_a_ser_indenizado__c</fullName>
    <label>Valor total a ser indenizado</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>