workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/validationRules/Data_programada_de_pagamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_programada_de_pagamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Tipo_de_OP__c  , &quot;Indenização&quot;),
	ISCHANGED(Data_Programada_de_Pagamento__c),
 Data_Programada_de_Pagamento__c &lt; (TODAY() + 2)

)</errorConditionFormula>
    <errorDisplayField>Data_Programada_de_Pagamento__c</errorDisplayField>
    <errorMessage>A data programada deve ser maior ou igual à dois dias da data atual.</errorMessage>
</ValidationRule>