workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/validationRules/Libera_pagto_para_beneficiario_validado.validationRule-meta.xml
<ValidationRule>
    <fullName>Libera_pagto_para_beneficiario_validado</fullName>
    <active>false</active>
    <description>Regra de validação permite a alteração para o status de liberado apenas se o beneficiário for validado</description>
    <errorConditionFormula>AND( BeneficiarioValidado__c = false,
  ISPICKVAL(Tipo_de_OP__c, &quot;Indenização&quot;) , 
 ISCHANGED(Status__c),       
 ISPICKVAL( Status__c , &quot;Liberado&quot;)  ||  ISPICKVAL( Status__c , &quot;Erro&quot;)

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Para liberar o pagamento o beneficiário deve ser validado.</errorMessage>
</ValidationRule>