workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/validationRules/validar_perfil.validationRule-meta.xml
<ValidationRule>
    <fullName>validar_perfil</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(ISNEW(), $Profile.Name == &apos;API&apos;, $Profile.Name = &apos;Administrador do sistema&apos;))</errorConditionFormula>
    <errorMessage>Você não tem perfil para alterar ou criar este pagamento de sinistro</errorMessage>
</ValidationRule>