workspace-sf/force-app/main/default/objects/Pagamento_de_Sinistro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiario_da_Garantia__c</columns>
    <columns>Tipo_de_OP__c</columns>
    <columns>OP_SAP__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>